# pycpio

./: pyproject.toml  readme.md
.github/workflows/: unit_tests.yml
completion/: _pycpio
src/pycpio/: __init__.py  cpio.py  cpiodata.py  cpioentry.py  cpiomagic.py  cpiomodes.py  header.py  main.py  permissions.py  pycpio.py
src/pycpio/cpio/: __init__.py  archive.py  chardev.py  common.py  data.py  dir.py  factory.py  file.py  header.py  reader.py  symlink.py  writer.py
src/pycpio/errors/: __init__.py  errors.py
src/pycpio/header/: __init__.py  cpioheader.py  header_funcs.py  headers.py
src/pycpio/magic/: __init__.py  magic.py
src/pycpio/masks/: __init__.py  modes.py  permissions.py
src/pycpio/modes/: __init__.py  modes.py
src/pycpio/permissions/: __init__.py  permissions.py
src/pycpio/reader/: __init__.py  reader.py
src/pycpio/tests/: test_cpio.py
src/pycpio/writer/: __init__.py  writer.py
tests/: cpio_test_headers.py  test_compression.py  test_cpio.py
