[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycpio"
version = "1.5.6"

authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "A Python library for reading and writing cpio archives."
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = ["zenlib >= 3.0.2"]

[project.optional-dependencies]
zstd = ["zstandard"]

[project.scripts]
pycpio = "pycpio.main:main"

[project.urls]
Homepage = "https://github.com/desultory/pycpio"
Issues = "https://github.com/desultory/pycpio/issues"
